# AddMusicKFF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.helper.py  appveyor.yml  conanfile.txt  zip_script.ps1
build-tools/: make_deploy_base.py
build_scripts/: amk_test_toolkit.py
deploy/: addmusic.yml
src/: AddmusicException.hpp  CMakeLists.txt  MMLBase.cpp  MMLBase.h  Music.cpp  Music.h  SoundEffect.cpp  Utility.cpp  asarBinding.cpp  asarBinding.h
src/AM405Remover/: AM405Remover.h  AddMusic.cpp  AddMusic.h  CMakeLists.txt
src/AM4Batch/: CMakeLists.txt
src/AMKCLI/: CMakeLists.txt  main.cpp
src/AMKGUI/: CMakeLists.txt
src/AMMBatch/: CMakeLists.txt
src/AddmusicK/: AddmusicException.h  AddmusicException.hpp  AddmusicK.cpp  AddmusicK.h  AddmusicK.hpp  AddmusicK_CLI.cpp  AddmusicK_core.cpp  AddmusicK_core.hpp  AddmusicK_pj.cpp  AddmusicLogging.h  BankDefine.h  CMakeLists.txt  Directory.h  MMLBase.cpp  MMLBase.h  Music.cpp  Music.h  Package.cpp  Package.h  ROMEnvironment.cpp  ROMEnvironment.h  SPCEnvironment.cpp  SPCEnvironment.h  Sample.h  SampleGroup.h  SoundEffect.cpp  SoundEffect.h  Utility.cpp  Utility.h  asarBinding.cpp  asarBinding.h  asardll.c  asardll.h  defines.h  defines.h.in  fs.h  globals.cpp  globals.h  logging.cpp  logging.hpp  (+1 more)
src/AddmusicK/experimental/: MMLParserBase.cpp  MMLParserBase.h
src/AddmusicV/: AddmusicException.hpp  MMLBase.h  Music.cpp  SPCEnvironment.cpp  SoundEffect.cpp  defines.h
src/package/: CMakeLists.txt  packageblob.h.in
tests/: CMakeLists.txt
tests/AddmusicK/: CMakeLists.txt  addmusick_test.cpp  asarBinding_test.cpp
utilities/: check_diff.sh
